# loganalyzer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
reports/: my_report.csv
src/: main.py
src/loganalyzer/: log_analyzer.py  report.py
src/tests/: test_log_analyzer.py
src/utils/: exceptions.py  handler.py  parser.py  pool.py  validate.py
